--- a/appendix.tex
+++ b/appendix.tex
@@ -16,9 +16,9 @@
 \begin{document}
 
 \begin{center}
-\textbf{\huge TODO競賽名稱}\\
+\textbf{\huge Toj Theme Contest 001 資料結構入門}\\
 \vspace{5mm}
-\textbf{\huge TODO競賽名稱\ 試題本}\\
+\textbf{\huge Toj Theme Contest 001 資料結構入門\ 試題本}\\
 \vspace{10mm}
 \rule{17cm}{2pt}\\
 \vspace{5mm}
